Added docs for tokens handlers
