# token/handlers/obtain.go
@@ -4,10 +4,8 @@ import (
 	"net/http"
 
 	echo "github.com/labstack/echo/v4"
-    jwt "github.com/golang-jwt/jwt/v5"
 
-	tokenErrors "github.com/Danil-114195722/Knofu/token/errors"
-	"github.com/Danil-114195722/Knofu/token/services"
+	"github.com/Danil-114195722/Knofu/token/serializers"
 )
 
 
@@ -20,31 +18,21 @@ import (
 //	@Accept			json
 //	@Produce		json
 //	@Security		Refresh
+//	@Success		200	{object}	serializers.ObtainTokenOut
+//	@Failure		400	{object}	error	"BadRequest (See ErrorsDeafultSchema in README.md)"
+//	@Failure		401	{object}	error	"Unauthorized (See ErrorsDeafultSchema in README.md)"
 func Obtain(context echo.Context) error {
-	// достаём map значений JWT-токена из контекста context
-    token, ok := context.Get("user").(*jwt.Token)
-    if !ok {
-        return tokenErrors.InvalidTokenError
-    }
-    tokenClaims, ok := token.Claims.(jwt.MapClaims)
-    if !ok {
-        return tokenErrors.GetTokenClaimsError
-    }
-
-    // достаём из map'а токена id юзера
-    userIdFloat, ok := tokenClaims["id"].(float64)
-	if !ok {
-	    return tokenErrors.GetTokenUserIdError
-	}
-
-    // создаём новый access токен для юзера по его id из refresh токена
-	accessToken, err := services.GetAccessToken(uint64(userIdFloat))
+    // достаём из контекста из содержимого токена id юзера
+    userId, err := serializers.GetUserId(context)
 	if err != nil {
-		return err
+	    return err
 	}
 
-	return context.JSON(http.StatusOK, map[string]string{
-		"status": "ok",
-		"accessToken": accessToken,
-	})
+	// формирование структуры для ответа
+    dataOut, err := serializers.GetObtainOutStruct(userId)
+    if err != nil {
+	    return err
+	}
+
+	return context.JSON(http.StatusOK, dataOut)
 }
